Fixing layout issues - About

--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -2,7 +2,6 @@
 	margin: 50px auto;
 	text-align: center;
 	font-family: 'Open Sans', sans-serif;
-	height: 30vh;
 	.vision {
 		margin-top: 50px;
 	}
@@ -16,10 +15,6 @@
 		text-align: center;
 		color: white;
 	}
-}
-
-.tutors-list {
-	min-height: 70vh;
 }
 
 .tutor-card {
